--- a/style.css
+++ b/style.css
@@ -103,6 +103,9 @@ select,
 button {
   font: inherit;
 }
+a {
+  decoration: none;
+}
 
 html {
   /**
@@ -347,6 +350,46 @@ body {
     border-radius: 10px;
 }
 
+.main_card_3 {
+    background-color: var(--color-light);
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+    gap: 40px;
+    height: 850px;
+    border-radius: 60px;
+}
+
+.project_title {
+    font-size: 50px;
+    font-weight: 700;
+    text-align: center;
+    color: var(--color-accent);
+    margin-bottom: 70px;
+    margin-top: 20px;
+}
+.project {
+  display: flex;
+  justify-content: space-evenly;
+  gap: 270px
+}
+
+.project1 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 350px;
+  height: 550px;
+  border: var(--color-main) solid 1px;
+  border-radius: 30px;
+  background-color: var(--color-accent);
+  color: var(--color-light);
+  font-size: 24px;
+  font-weight: 700;
+}
+
+
 
 @media (max-width: 1400px){
     .main_my_photo {
@@ -393,8 +436,11 @@ body {
       margin-bottom: 30px;
       text-align: center;
       color: var(--color-light);
-      margin-bottom: 80px;
+      margin-bottom: 60px;
       margin-top: 20px;
+    }
+    .project {
+      gap:150px;
     }
 }
 
@@ -411,6 +457,7 @@ body {
         margin-bottom: 30px;
         font-weight: 700;
         font-size: 24px;
+        text-align: center;
     }
     .main_save_rez {
         color: var(--color-light);
@@ -447,6 +494,12 @@ body {
       align-items: center;
       flex-direction: column;
     }
+     .skills {
+      margin-bottom: 30px;
+    }
+    .project {
+      gap:70px;
+    }
 }
 
 @media (max-width: 590px) {
@@ -463,7 +516,7 @@ body {
     } 
     .nav_item {
       font-size: 500;
-      font-size: 7px;
+      font-size: 10px;
       padding: 5px 15px;
       border-radius: 10px;
     }
@@ -471,6 +524,7 @@ body {
       margin-bottom: 30px;
       font-weight: 700;
       font-size: 16px;
+      text-align: center;
     }
 
     .main_my_photo {
@@ -480,6 +534,23 @@ body {
     .main_save_rez{
       font-size: 20px;
     }
-
-
+    .nav {
+      margin: 0px 25px 25px 25px; 
+    }
+    .skills {
+      margin-bottom: 30px;
+    }
+    .project {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+    }
+    .project1 {
+      width: 510px;
+      height: 250px;
+    }
+    .project_title {
+      margin-bottom: 40px;
+    }
 }
