--- a/style.css
+++ b/style.css
@@ -388,6 +388,28 @@ body {
   font-size: 24px;
   font-weight: 700;
 }
+.footer {
+    background-color: var(--color-accent);
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-self: flex-end;
+}
+.footer div {
+    width: 100%;
+    max-width: 500px;
+    height: 60px;
+    background-color: var(--color-light);
+    text-align: center;
+    border-radius: 20px;
+}
+
+.footer h3 {
+    margin-top: 18px;
+    color: var(--color-black);
+    font-size: 20px;
+}
 
 
 
@@ -520,6 +542,9 @@ body {
       padding: 5px 15px;
       border-radius: 10px;
     }
+    .main_card {
+
+    }
     .main_about{
       margin-bottom: 30px;
       font-weight: 700;
@@ -547,10 +572,11 @@ body {
       flex-direction: column;
     }
     .project1 {
-      width: 510px;
+      width: 370px;
       height: 250px;
     }
     .project_title {
       margin-bottom: 40px;
+
     }
 }
