--- a/style_news.css
+++ b/style_news.css
@@ -264,10 +264,7 @@ body {
     padding: 5px 15px;
     border-radius: 10px;
 }
-/* Основаная часть */
-.main {
-    margin: 28px;
-}
+
 .main_card {
     background-color: var(--color-light);
     display: flex;
@@ -278,116 +275,10 @@ body {
     height: 850px;
     border-radius: 60px;
 }
-.main_my_photo {
-    border-radius: 80px;
-    width: 490px;
-    height: 490px;
-}
-
-.main_about {
-    margin-bottom: 30px;
-    font-weight: 700;
-    font-size: 40px;
-}
-
-.main_save_rez {
-    color: var(--color-light);
-    font-weight: 500;
-    background-color: var(--color-accent);
-    padding: 20px 32px;
-    border-radius: 20px;
-    border: none;
-}
-
-.main_card_2 {
-  display: flex;
-  justify-content: space-between;
-}
-
-.skills_title {
-    font-size: 50px;
-    font-weight: 700;
-    margin-bottom: 30px;
-    text-align: center;
-    color: var(--color-light);
-    margin-bottom: 250px;
-    margin-top: 20px;
+.main_news_1 {
     
 }
 
-.skills {
-    display: flex;
-    flex-direction: column;
-    gap: 30px;
-    width: 300px;
-    max-width: 600px;
-    margin: 0 auto;
-}
-
-.skill {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-}
-
-.skill span {
-    font-size: 22px;
-    color: var(--color-light);
-    font-weight: 600;
-}
-
-.skill-line {
-    width: 100%;
-    height: 14px;
-    background-color: var(--color-light);
-    border-radius: 10px;
-    overflow: hidden;
-}
-
-.skill-line div {
-    height: 100%;
-    background-color: var(--color-accent);
-    border-radius: 10px;
-}
-
-.main_card_3 {
-    background-color: var(--color-light);
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    width: 100%;
-    gap: 40px;
-    height: 850px;
-    border-radius: 60px;
-}
-
-.project_title {
-    font-size: 50px;
-    font-weight: 700;
-    text-align: center;
-    color: var(--color-accent);
-    margin-bottom: 70px;
-    margin-top: 20px;
-}
-.project {
-  display: flex;
-  justify-content: space-evenly;
-  gap: 270px
-}
-
-.project1 {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 350px;
-  height: 550px;
-  border: var(--color-main) solid 1px;
-  border-radius: 30px;
-  background-color: var(--color-accent);
-  color: var(--color-light);
-  font-size: 24px;
-  font-weight: 700;
-}
 .footer {
     background-color: var(--color-accent);
     height: 100px;
@@ -409,193 +300,4 @@ body {
     margin-top: 18px;
     color: var(--color-black);
     font-size: 20px;
-}
-
-
-
-@media (max-width: 1400px){
-    .main_my_photo {
-        width: 400px;
-        height: 400px;
-    }
-    .main_about {
-        margin-bottom: 30px;
-        font-weight: 700;
-        font-size: 30px;
-    }
-    .nemov {
-        width: 348px;
-        height: 715px;
-    }
-}
-
-@media (max-width: 1100px) {
-    .main_my_photo {
-        width: 350px;
-        height: 350px;
-    }
-    .main_about {
-        margin-bottom: 30px;
-        font-weight: 700;
-        font-size: 24px;
-    }
-    .main_save_rez {
-        color: var(--color-light);
-        font-weight: 500;
-        background-color: var(--color-accent);
-        padding: 20px 32px;
-        border-radius: 20px;
-        border: none;
-    }
-
-    .nemov {
-        width: 256px;
-        height: 528px;
-    }
-    .skills_title {
-      font-size: 50px;
-      font-weight: 700;
-      margin-bottom: 30px;
-      text-align: center;
-      color: var(--color-light);
-      margin-bottom: 60px;
-      margin-top: 20px;
-    }
-    .project {
-      gap:150px;
-    }
-}
-
-@media (max-width: 940px) {
-    .header {
-        flex-wrap: wrap;
-        margin: 0px;
-    }
-    .main_my_photo {
-        width: 350px;
-        height: 350px;
-    }
-    .main_about {
-        margin-bottom: 30px;
-        font-weight: 700;
-        font-size: 24px;
-        text-align: center;
-    }
-    .main_save_rez {
-        color: var(--color-light);
-        font-weight: 500;
-        background-color: var(--color-accent);
-        padding: 20px 32px;
-        border-radius: 20px;
-        border: none;
-    }
-    .main_card {
-        background-color: var(--color-light);
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-        width: 100%;
-        gap: 40px;
-        height: 850px;
-        border-radius: 60px;
-    }
-    .main_title {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
-
-    .nemov {
-        display: none;
-    }
-    .main_card_2 {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      flex-direction: column;
-    }
-     .skills {
-      margin-bottom: 30px;
-    }
-    .project {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      flex-direction: column;
-    }
-    .project1 {
-      width: 500px;
-      height: 150px;
-      gap:70px;
-    }
-    .project_title {
-      margin-bottom: 40px;
-    }
-}
-
-@media (max-width: 590px) {
-    .header {
-      justify-content: center;
-    }
-    .logo_img{
-      width: 61px;
-      height: 60px;
-    }
-    .logo_name {
-      font-weight: 700;
-      font-size: 16px;
-    } 
-    .nav_item {
-      font-size: 500;
-      font-size: 10px;
-      padding: 5px 15px;
-      border-radius: 10px;
-    }
-    .main_card {
-
-    }
-    .main_about{
-      margin-bottom: 30px;
-      font-weight: 700;
-      font-size: 16px;
-      text-align: center;
-    }
-
-    .main_my_photo {
-      width: 250px;
-      height: 250px;
-    }
-    .main_save_rez{
-      font-size: 20px;
-    }
-    .nav {
-      margin: 0px 25px 25px 25px; 
-    }
-    .skills {
-      margin-bottom: 30px;
-    }
-    .main_card_3 {
-      height: 680px;
-    }
-    .project {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      flex-direction: column;
-    }
-    .project1 {
-      width: 300px;
-      height: 150px;
-    }
-    .project_title {
-      margin-bottom: 40px;
-    }
-    .footer div {
-      width: 350px;
-    }
-    .footer h3 {
-      font-size: 16px;
-    }
 }
